collection column on mods page enumerates collections a mod is part of
added an element with a tooltip which displays which collections a mod
is part of (if more than 1)

--- a/style.scss
+++ b/style.scss
@@ -215,6 +215,24 @@ $collection-mod-image-height: 200px;
   }
 }
 
+#collection-mods-page-attribute-renderer {
+  align-items: center;
+  .collection-mods-page-attr-addendum {
+    border-color: $text-color;
+    border-radius: 4px;
+    width: 30px;
+    height: 22px;
+    background: $text-color;
+    color: $table-bg-hover;
+    font-weight: 600;
+    margin-left: 10px;
+  }
+}
+
+ul.collection-mods-page-attrib-tooltip {
+  padding-inline-start: 12px;
+}
+
 .collection-description-popover {
   min-width: 60vw;
   max-width: 60vw;
