--- a/style.scss
+++ b/style.scss
@@ -988,7 +988,8 @@ ul.collection-mods-page-attrib-tooltip {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: $gutter-width;
+  padding: $half-gutter;
+  padding-top: $half-gutter * 0.3;
 
   width: 31.7em;
 
@@ -1022,9 +1023,6 @@ ul.collection-mods-page-attrib-tooltip {
       align-items: center;
       letter-spacing: 1.25px;
       text-transform: uppercase;
-      white-space: nowrap;
-      overflow: hidden;
-      text-overflow: ellipsis;
 
       flex-grow: 4;
       margin: 0px 8px;
@@ -1035,9 +1033,14 @@ ul.collection-mods-page-attrib-tooltip {
     }
   }
 
-  .collection-instructions-title {
+  .collection-instructions-mod-name {
     font-weight: $headings-font-weight;
     flex-shrink: 3;
+    h3 {
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+    }
   }
 
   .collection-instructions-content {
