slight cleanup, minor bugfixes

--- a/style.scss
+++ b/style.scss
@@ -224,6 +224,8 @@ $collection-mod-image-height: 200px;
     color: $table-bg-hover;
     font-weight: 600;
     margin-left: 1em;
+    padding-top: 0;
+    padding-bottom: 0;
   }
 }
 
