fixed thumbnail styling in the collection page

--- a/style.scss
+++ b/style.scss
@@ -602,8 +602,8 @@ ul.collection-mods-page-attrib-tooltip {
     // max-width: $collection-thumbnail-width;
     // max-height: 100%;
     // width: auto;
-    height: auto;
-    width: auto;
+    // height: auto;
+    // width: auto;
 
     .thumbnail-img {
       transition: max-width 500ms, max-height 500ms;
