--- a/style.scss
+++ b/style.scss
@@ -330,8 +330,13 @@ ul.collection-mods-page-attrib-tooltip {
     bottom: 0;
     left: 0;
     right: 0;
-    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.7) 70%, rgba(0, 0, 0, 0.9) 93%);
     border-radius: $border-radius;
+  }
+
+  &:hover {
+    .gradient {
+      background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.7) 70%, rgba(0, 0, 0, 0.9) 93%);
+    }
   }
 
   .thumbnail-img {
@@ -342,10 +347,11 @@ ul.collection-mods-page-attrib-tooltip {
 
   .bottom {
     position: absolute;
-    bottom: 6%;
-    left: 1em;
-    right: 1em;
-    display: flex;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    padding: 1em;
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.95));
 
     flex-direction: column;
 
