--- a/style.scss
+++ b/style.scss
@@ -354,9 +354,11 @@ ul.collection-mods-page-attrib-tooltip {
     border-radius: $border-radius;
   }
 
-  &:hover {
-    .gradient {
-      background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.7) 70%, rgba(0, 0, 0, 0.9) 93%);
+  &.has-menu {
+    &:hover {
+      .gradient {
+        background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.7) 70%, rgba(0, 0, 0, 0.9) 93%);
+      }
     }
   }
 
