fixed: partial clone of collections included invalid items

--- a/style.scss
+++ b/style.scss
@@ -687,6 +687,10 @@ ul.collection-mods-page-attrib-tooltip {
   }
 }
 
+.collection-page-detail-bar .dropdown svg {
+  margin-right: 0.5em;
+}
+
 .installing-mod-overview.panel {
   .installing-mod-title {
     @extend .h3;
