allow mod-images in slideshow to be zoomed

--- a/style.scss
+++ b/style.scss
@@ -667,7 +667,7 @@ ul.collection-mods-page-attrib-tooltip {
       }
     }
 
-    .installing-mod-image {
+    .installing-mod-image .zoomable-image {
       max-width: $collection-mod-image-width;
       max-height: $collection-mod-image-height;
     }
