added update button for collections
also remove the old version of the collection during update

--- a/style.scss
+++ b/style.scss
@@ -463,7 +463,7 @@ ul.collection-mods-page-attrib-tooltip {
       border: 0px;
       display: flex;
       width: 100%;
-      margin: 4px;
+      margin: 4px 0;
     }
   }
 
@@ -538,7 +538,7 @@ ul.collection-mods-page-attrib-tooltip {
       margin-right: auto;
       margin-top: 5em;
       // justify-content: center;
-      > .btn {
+      .btn {
         justify-content: center;
         align-items: center;
         > .icon {
