Allow profile selection upon starting install
collection (and its mods) is enabled in that collection

--- a/style.scss
+++ b/style.scss
@@ -1198,3 +1198,15 @@ ul.collection-mods-page-attrib-tooltip {
     margin-right: 0.5em;
   }
 }
+
+.gutter-above {
+  margin-top: $gutter-width;
+}
+
+#collections-profile-select {
+  gap: 0.5em;
+
+  .layout-flex {
+    overflow: visible;
+  }
+}
