fixed: "add mods" button offset from bottom

--- a/style.scss
+++ b/style.scss
@@ -99,7 +99,7 @@ $collection-mod-image-height: 200px;
   display: flex;
   justify-content: center;
   position: sticky;
-  bottom: 0.5em;
+  bottom: 0;
   background: rgba($gray-lighter, 0.7);
   padding: 1em 0;
   svg {
