--- a/style.scss
+++ b/style.scss
@@ -1214,3 +1214,22 @@ ul.collection-mods-page-attrib-tooltip {
     overflow: visible;
   }
 }
+
+#install-changelog-dialog {
+  h4 {
+    margin-top: 0;
+    margin-bottom: 0;
+  }
+
+  .media-right {
+    width: 100%;
+    .layout-container-row {
+      justify-content: space-between;
+    }
+
+    .changelog-scroll {
+      max-height: 30vh;
+      overflow: auto;
+    }
+  }
+}
