slight styling fix

--- a/style.scss
+++ b/style.scss
@@ -1232,4 +1232,8 @@ ul.collection-mods-page-attrib-tooltip {
       overflow: auto;
     }
   }
+
+  .collection-open-button {
+    margin-top: $half-gutter;
+  }
 }
