--- a/style.scss
+++ b/style.scss
@@ -372,15 +372,17 @@ ul.collection-mods-page-attrib-tooltip {
     left: 0;
     right: 0;
     border-radius: $border-radius;
+    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.7) 70%, rgba(0, 0, 0, 0.9) 93%);
   }
 
+  /*
   &.has-menu {
     &:hover {
       .gradient {
-        background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.7) 70%, rgba(0, 0, 0, 0.9) 93%);
       }
     }
   }
+  */
 
   .thumbnail-img {
     width: 100%;
@@ -393,20 +395,24 @@ ul.collection-mods-page-attrib-tooltip {
     bottom: 0;
     left: 0;
     right: 0;
-    padding: 1em;
+    padding: 8em 1em 1em;
     background: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.95));
 
     flex-direction: column;
 
     .name {
-      @extend .h3;
-      width: 8em;
+      // @extend .h4;
+      // width: 8em;
+      font-size: 1.175em;
+      margin: 0.5em 0;
+      font-weight: bold;
     }
 
     .details {
       font-size: smaller;
       color: $text-color-disabled;
       display: flex;
+      justify-content: space-between;
 
       > *:not(:first-child) {
         margin-left: 1em;
@@ -483,9 +489,11 @@ ul.collection-mods-page-attrib-tooltip {
     }
   }
 
+  /*
   .no-hover {
     margin-right: 1.5em;
   }
+  */
 
   .hover {
     .collection-name {
@@ -497,13 +505,18 @@ ul.collection-mods-page-attrib-tooltip {
 
   .revision-number {
     background-color: $brand-bg;
-    padding: 0 0.5em;
+    padding: 2px 12px;
+    border-radius: 20px;
+    width: fit-content;
+    text-transform: uppercase;
+    font-size: smaller;
   }
 
   .author {
-    position: absolute;
-    top: 0.5em;
-    left: 0.5em;
+    // position: absolute;
+    // top: 0.5em;
+    // left: 0.5em;
+    text-transform: uppercase;
 
     img {
       width: 16px;
@@ -1194,13 +1207,16 @@ ul.collection-mods-page-attrib-tooltip {
 }
 
 .collections-new-revision {
-  border: $border-width solid $brand-primary;
-  background: $gray-darker;
-  color: $brand-primary;
-  padding: 0 0.5em;
+  // border: $border-width solid $brand-primary;
+  background: $brand-info;
+  padding: 3px 4px;
   width: fit-content;
   border-radius: 4px;
   text-transform: uppercase;
+  position: absolute;
+  top: $half-gutter;
+  right: $half-gutter;
+  font-weight: bold;
 
   .icon {
     margin-right: 0.5em;
@@ -1259,4 +1275,28 @@ ul.collection-mods-page-attrib-tooltip {
   padding: 0 0.5em;
   gap: 0.5em;
   width: fit-content;
+}
+
+.collection-revision-and-rating {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.collection-success-indicator {
+  svg {
+    margin-right: 0.5em;
+  }
+  &.success-rating-insufficient {
+    color: $text-color-disabled;
+  }
+  &.success-rating-bad {
+    color: $brand-danger;
+  }
+  &.success-rating-dubious {
+    color: $brand-warning;
+  }
+  &.success-rating-good {
+    color: $brand-success;
+  }
 }
