--- a/style.scss
+++ b/style.scss
@@ -355,6 +355,12 @@ ul.collection-mods-page-attrib-tooltip {
   position: relative;
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.35);
 
+  &.collection-remote {
+    .thumbnail-img, .bottom {
+      filter: opacity(0.5);
+    }
+  }
+
   > .collection-thumbnail-body.panel-body {
     padding: 0;
     height: 100%;
