fixed styling of tool icons

--- a/style.scss
+++ b/style.scss
@@ -54,6 +54,11 @@ $collection-mod-image-height: 122px;
   }
 }
 
+#collection-tools-table .tool-icon {
+  width: 2.5em;
+  height: 2.5em;
+}
+
 #collection-edit-tabs {
   height: 100%;
   overflow-y: hidden;
