ask user for feedback/endorsement when they vote on success

--- a/style.scss
+++ b/style.scss
@@ -1207,6 +1207,10 @@ ul.collection-mods-page-attrib-tooltip {
       padding: 0.5em;
       color: $text-color;
       width: 100%;
+
+      &.voted {
+        background-color: $gray-light;
+      }
     }
 
     /*
