--- a/style.scss
+++ b/style.scss
@@ -1534,6 +1534,7 @@ ul.collection-mods-page-attrib-tooltip {
 #collection-view-tabs-pane-instructions {
   overflow: auto;
   max-height: 100%;
+  height: 100%;
 
   .collection-instructions-text {
     white-space: pre-wrap;
