--- a/style.scss
+++ b/style.scss
@@ -1422,6 +1422,11 @@ ul.collection-mods-page-attrib-tooltip {
   align-items: flex-start;
 }
 
+
+.collections-instructions-canbereviewed {  
+  margin: 0 0 7px 0;
+}
+
 .collections-you-curated-tag {
   border-radius: 20px;
   background-color: $white;
@@ -1432,6 +1437,7 @@ ul.collection-mods-page-attrib-tooltip {
   padding: 0 0.5em;
   gap: 0.5em;
   width: fit-content;
+  margin: 0 0 7px 0;
 }
 
 .collection-revision-and-rating {
@@ -1511,9 +1517,9 @@ ul.collection-mods-page-attrib-tooltip {
 }
 
 .textarea-install-collection-instructions {
-  width: 100%;
-  height: 100%;
-  resize: none;
+  flex: 1 1 0;
+  resize: none;    
+  padding: 5px 10px;
 }
 
 #collection-view-tabs {
