--- a/style.scss
+++ b/style.scss
@@ -1519,7 +1519,14 @@ ul.collection-mods-page-attrib-tooltip {
 .textarea-install-collection-instructions {
   flex: 1 1 0;
   resize: none;    
-  padding: 5px 10px;
+  padding: 5px 8px;
+  background-color: $brand-bg;
+  border: 1px solid $text-color;
+  overflow: auto;
+}
+
+.textarea-install-collection-instructions p {
+  margin: 0 0 7px 0;
 }
 
 #collection-view-tabs {
