added markdown support in other places

--- a/style.scss
+++ b/style.scss
@@ -1553,6 +1553,10 @@ ul.collection-mods-page-attrib-tooltip {
     white-space: pre-wrap;
   }
 
+  .collection-instructions-text p {
+    margin: 0 0 7px 0;
+  }
+  
   .collection-instructions-container {
     padding: 0 $half-gutter;
   }
