updated border color

--- a/style.scss
+++ b/style.scss
@@ -1521,7 +1521,7 @@ ul.collection-mods-page-attrib-tooltip {
   resize: none;    
   padding: 5px 8px;
   background-color: $brand-bg;
-  border: 1px solid $text-color;
+  border: 1px solid $border-color;
   overflow: auto;
 }
 
