--- a/style.scss
+++ b/style.scss
@@ -687,6 +687,32 @@ ul.collection-mods-page-attrib-tooltip {
   border-radius: 26px;
   padding: 0.5em 1em;
   background-color: transparent;
+
+  &[disabled] {
+    opacity: 0.4;
+
+    &:hover {
+      background-color: transparent;
+      border-color: rgba(255, 255, 255, 0.1);
+    }
+  }
+
+  &:focus {
+    color: #F4F4F5;
+    background-color: transparent;
+    border-color: rgba(255, 255, 255, 0.1);
+  }
+
+  &.endorse-yes {
+    color: $brand-clickable;
+    background-color: transparent;
+    border-color: $brand-clickable;  
+    
+    &:hover {
+      color: $text-color;
+      background-color: darken($btn-default-bg, 12%);
+    }
+  }
 }
 
 .collection-overview.panel {
@@ -1156,7 +1182,16 @@ ul.collection-mods-page-attrib-tooltip {
   .collection-health-body {
     padding: 1em;
     gap: 1em;
+
     .collection-health-rating-text {
+      font-size: larger;
+      text-align: center;
+      height: 100%;
+      display: flex;
+      align-items: center;
+    }
+
+    .collection-health-rating-placeholder {
       font-size: larger;
       text-align: center;
     }
@@ -1202,13 +1237,56 @@ ul.collection-mods-page-attrib-tooltip {
 
     button {
       border-radius: 45px;
-      border-color: $text-color-disabled;
+      //border-color: $text-color-disabled;
       padding: 0.5em;
       color: $text-color;
       width: 100%;
 
+      // disabled until x time after install completed (no long used as buttons aren't shown until able)
+      [disabled] {
+        color: $text-color-disabled;
+
+        &:hover {
+          color: $text-color-disabled;
+          background-color: transparent;
+          //border-color: $text-color-disabled;;
+        }
+      }
+
+      /*
+      &:focus {
+        color: $text-color;
+        background-color: rgba($link-hover-color, 0.3);
+        //border-color: $text-color-disabled;
+      }
+
+      // hover color
+      &:hover {
+        color: $text-color;
+        background-color: $link-hover-color;
+        border-color: $link-hover-color;
+      }
+
+
+      // 'mouse down'
+      &:active:focus {          
+        color: $text-color;
+        background-color: $brand-clickable;
+        border-color: $brand-clickable;        
+      }*/
+
+      // if they have voted / basically the selected button of the two
       &.voted {
-        background-color: $gray-light;
+        color: $brand-clickable;
+        background-color: transparent;
+        border-color: $brand-clickable;
+
+        // selected button so we need to strip out any 'mouse down' states
+        &:active:focus {          
+          color: $brand-clickable;
+          background-color: transparent;
+          border-color: $brand-clickable;        
+        }
       }
     }
 
